--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,13 @@
                         <li><a href="{{ url_for('about') }}">About Us</a></li>
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
-                        <li><a href="{{ url_for('login') }}">Login</a></li>
-                        <li><a href="{{ url_for('signup') }}">Signup</a></li>
+                        {% if session['logged_in'] %} 
+                            <li><a href="{{ url_for('logout') }}">Login</a></li>
+                            <li><a href="{{ url_for('proflie') }}">Signup</a></li>
+                        {% else %}
+                            <li><a href="{{ url_for('login') }}">Login</a></li>
+                            <li><a href="{{ url_for('signup') }}">Signup</a></li>
+                        {% endif %}
                     </ul>
                 </div>
             </div>
