--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,9 @@
                         <li><a href="{{ url_for('index') }}">Home</a></li>
                         <li><a href="{{ url_for('gasCheck') }}">Price Check</a></li>
                         <li><a href="{{ url_for('about') }}">About Us</a></li>
+                        {% if session['logged_in'] %} 
+                            <li><a href="{{ url_for('favorite') }}">Favorite</a></li>
+                        {% endif %}
                     </ul>
                     <ul class="nav navbar-nav navbar-right">
                         {% if session['logged_in'] %} 
