--- a/templates/about.html
+++ b/templates/about.html
@@ -9,9 +9,9 @@
     <div class="container" id="about_us_id">
         <h1>About Us</h1>
         <p>At CheapoGas, 
-            our primary objective is to make a meaningful impact on people's lives by providing a reliable resource for 
-            finding the most cost-effective gas prices in their local area. 
-            We understand the importance of saving money, so we've created a platform allowing users to check gas prices effortlessly before even stepping into their cars. 
+            our primary objective is to make an impact on people's lives by providing a reliable resource for 
+            finding the cheapest gas prices in their local area. 
+            We understand the importance of saving money, so we've created a platform allowing users to check gas prices before even stepping into their cars. 
             Our commitment to this goal drives everything we do, and we're dedicated to continually improving our services to serve our community better.</p>
     </div>
 
