add miles instead of meter

--- a/templates/GasCheck.html
+++ b/templates/GasCheck.html
@@ -26,10 +26,12 @@
 
     function getUserInput() {
         var radius = document.getElementById("radius_input").value;
+        
+        radius = radius * 1609.34;
 
         navigator.geolocation.getCurrentPosition(position => {
             const {latitude, longitude} = position.coords;
-            initMap(latitude, longitude); // no need to assign to var map
+            initMap(latitude, longitude); 
 
             fetchGasStation(latitude, longitude, radius)
             .then(gasStations => {
