--- a/templates/login.html
+++ b/templates/login.html
@@ -10,14 +10,15 @@
 <div class="login-box">
 
     <h1>Login</h1>
-    <div class="login-group">
+    <form action="login.php" method="post">
+        <div class="login-group">
     
-        <input type="text" placeholder="Enter Username" name="username" required>
+            <input type="text" placeholder="Enter Username" name="username" required>
 
-        <input type="password" placeholder="Enter Your Password" name="password" required>
+            <input type="password" placeholder="Enter Your Password" name="password" required>
 
-        <button type="submit" >Login</button>
-    </div>
-
+            <button type="submit" >Login</button>
+        </div>
+    </form>
 </div>
 {% endblock %}
