--- a/templates/GasCheck.html
+++ b/templates/GasCheck.html
@@ -120,6 +120,17 @@
     }
 
     function addToFavorites(name, street, url) {
+        var table = document.getElementById("gasStationTable");
+                var row = table.insertRow(); // Insert a new row into the table
+                
+                // Insert cells into the row and populate with data
+                var nameCell = row.insertCell(0);
+                var streetCell = row.insertCell(1);
+                var urlCell = row.insertCell(2);
+                
+                nameCell.innerHTML = name;
+                streetCell.innerHTML = street;
+                urlCell.innerHTML = '<a href="' + url + '" target="_blank">Check Prices on GasBuddy</a>';
         $.ajax({
             url: 'save_gasStation_info.php',
             type: 'POST',
