--- a/templates/GasCheck.html
+++ b/templates/GasCheck.html
@@ -172,8 +172,8 @@
     <table style="width: 60%;">
         <tr>
             <th>Gas Station</th>
-            <th>Price</th>
             <th>Address</th>
+            <th>Link</th>
         </tr>
         
     </table>
