added states to the search query

--- a/templates/GasCheck.html
+++ b/templates/GasCheck.html
@@ -69,7 +69,8 @@
             name: element.tags.name || "Can't Find Name",
             street: element.tags['addr:street'] || 'Street Not Specified',
             website: element.tags.website || 'Website Not Specified',
-            city: element.tags['addr:city'] || 'City Not Specified'
+            city: element.tags['addr:city'] || 'City Not Specified',
+            state: element.tags['addr:state'] || 'State Not Specified'
         }));
     })
     .catch(error => console.error('Error fetching gas stations:', error));
@@ -104,7 +105,8 @@
         var nameEncoded = encodeURIComponent(station.name);
         var streetEncoded = encodeURIComponent(station.street);
         var cityEncoded = encodeURIComponent(station.city);
-        var searchURL = `https://www.gasbuddy.com/home?search=${nameEncoded}%20${streetEncoded}%20${cityEncoded}`;
+        var stateEncoded = encodeURIComponent(station.state);
+        var searchURL = `https://www.gasbuddy.com/home?search=${nameEncoded}%20${streetEncoded}%20${cityEncoded}%20${stateEncoded}`;
 
         var marker = L.marker([station.lat, station.lon], {icon: gasStationIcon});
         var popupContent = `
@@ -112,7 +114,7 @@
                 <h4>${station.name}</h4>
                 <p>${station.street}</p>
                 <a href="${searchURL}" target="_blank">Check Prices on GasBuddy</a>
-                <p>${station.city}</>
+                <p>${station.city}, ${station.state}</>
                 <button onclick="addToFavorites('${station.id}')">Add to Favorites</button>
             </div>
         `;
