--- a/templates/favorite.html
+++ b/templates/favorite.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Favorites{% endblock %}
+{% block title %}Favorite{% endblock %}
 
 {% block content%}
 
