--- a/templates/login.html
+++ b/templates/login.html
@@ -10,7 +10,7 @@
 <div class="login-box">
 
     <h1>Login</h1>
-    <form action="login.php" method="post">
+    <form action="{{url_for('login')}}" method="post">
         <div class="login-group">
     
             <input type="text" placeholder="Enter Username" name="username" required>
@@ -19,6 +19,9 @@
 
             <button type="submit" >Login</button>
         </div>
+        {% if error%}
+            <div class="alert">{{ error }}</div>
+        {% endif %}
     </form>
 </div>
 {% endblock %}
