--- a/templates/GasCheck.html
+++ b/templates/GasCheck.html
@@ -116,25 +116,39 @@
                 <p>${station.street}</p>
                 <a href="${searchURL}" target="_blank">Check Prices on GasBuddy</a>
                 <p>${station.city}, ${station.state}</p>
-                <button onclick="addToFavorites('${station.id}')">Add to Favorites</button>
+                <button onclick="addToFavorites('${station.name}', '${station.street}', '${searchURL}')">Add to Favorites</button>
             `;
+            // <button onclick="addToFavorites('${station.id}')">Add to Favorites</button>
             marker.bindPopup(popupContent).addTo(markerGroups);
         });
     }
+    
 
     function addToFavorites(name, street, url) {
-        var table = document.getElementById("gasStationTable");
-                var row = table.insertRow(); // Insert a new row into the table
-                
-                // Insert cells into the row and populate with data
-                var nameCell = row.insertCell(0);
-                var streetCell = row.insertCell(1);
-                var urlCell = row.insertCell(2);
-                
-                nameCell.innerHTML = name;
-                streetCell.innerHTML = street;
-                urlCell.innerHTML = '<a href="' + url + '" target="_blank">Check Prices on GasBuddy</a>';
-        $.ajax({
+        var table = document.querySelector("#gasStationTable table");
+        
+        if (table){
+
+            var existingUrls = Array.from(table.querySelectorAll("td:nth-child(3) a")).map(a => a.href);
+            if(existingUrls.includes(url)){
+                console.error('Gas station already favorited!');
+                return;
+            }
+            var row = table.insertRow(-1); // Insert a new row into the table
+                    
+            // Insert cells into the row and populate with data
+            var nameCell = row.insertCell(0);
+            var streetCell = row.insertCell(1);
+            var urlCell = row.insertCell(2);
+                    
+            nameCell.innerHTML = name;
+            streetCell.innerHTML = street;
+            urlCell.innerHTML = '<a href="' + url + '" target="_blank">Check Prices on GasBuddy</a>';
+        }
+        else {
+            console.error("Table not found");
+        }
+        /*$.ajax({
             url: 'save_gasStation_info.php',
             type: 'POST',
             data: { // May have to append 'station.' to the front...
@@ -159,7 +173,7 @@
             error: function() {
                 alert('Error: Not added to favorites.');
             }
-        });
+        });*/
     }
 
     $(document).ready(function(){
