--- a/templates/signup.html
+++ b/templates/signup.html
@@ -24,6 +24,9 @@
 
             <button type="submit" >Sign Up</button>
         </div>
+        {% if error%}
+            <div class="alert">Error on sign in</div>
+        {% endif %}
     </form>
 
 </div>
