Change to the html to let user know what site the going to

--- a/templates/GasCheck.html
+++ b/templates/GasCheck.html
@@ -207,7 +207,7 @@
 
             nameCell.textContent = station.name;
             streetCell.textContent = station.street;
-            linkCell.innerHTML = `<a href="${station.url}" target="_blank">Visit</a>`;
+            linkCell.innerHTML = `<a href="${station.url}" target="_blank">Visit Gas Buddy</a>`;
             });
         })
     .catch(error => {
